# PE-API-REPLACER

./: README.md  api_patcher.py  config.py
API/: output-dll.bat
API/exhttp/: build.bat  dllmain.c  version.rc  winhttp.def
API/exinet/: build.bat  dllmain.c  version.rc  wininet.def
API/exiphl/: build.bat  dllmain.c  iphlpapi_stub.def  version.rc
API/exiphl/msvcrt/x64/: exws2.lib
API/exiphl/ucrt/arm64/: exws2.lib
API/exiphl/ucrt/x32/: exws2.lib
API/exmsw/: build.bat  dllmain.c  exmsw.def
API/exnetapi/: build.bat  dllmain.c  exnetapi.def  version.rc
API/exsens/: build.bat  dllmain.c  sensapi.def  version.rc
API/extrust/: build.bat  dllmain.c  version.rc  wintrust.def
API/exurlm/: dllmain.c  urlmon.def  version.rc
API/exws/: build.bat  dllmain.c  version.rc  ws_32.def
API/exws2/: build.bat  dllmain.c  version.rc  ws2_32.def
API/exws2/msvcrt/arm64/: exws2.lib
API/exws2/msvcrt/x32/: exws2.lib
API/exws2/msvcrt/x64/: exws2.lib
API_NEW/: build.bat  dllmain.c
API_NEW/exhttp/: CMakeLists.txt  build-all.ps1  build.bat  dllmain.c  version.rc  winhttp.def
API_NEW/exhttp/build-ucrt-arm64/: CMakeCache.txt  build.ninja  cmake_install.cmake
API_NEW/exhttp/build-ucrt-x32/: CMakeCache.txt  build.ninja  cmake_install.cmake  version.res
API_NEW/exhttp/build-ucrt-x64/: CMakeCache.txt  build.ninja  cmake_install.cmake
API_NEW/exhttp/include/x32/: EXWS2.lib
API_NEW/exhttp/include/x64/: EXWS2.lib
API_NEW/exhttp/ucrt/arm64/: EXHTTP.lib  exws2.lib
API_NEW/exhttp/ucrt/x32/: EXHTTP.lib
API_NEW/exhttp/ucrt/x64/: EXHTTP.lib
API_NEW/exinet/: CMakeLists.txt  build-all.ps1  build.bat  cache.c  ftp.c  http.c  main.c  stubs.c  version.rc  wininet.def  wininet_internal.h
API_NEW/exinet/include/arm64/: EXIPHL.lib  EXWS2.lib
API_NEW/exinet/include/x32/: EXIPHL.lib  EXWS2.lib
API_NEW/exinet/include/x64/: EXIPHL.lib
API_NEW/exinet/ucrt/arm64/: exinet.lib
API_NEW/exinet/ucrt/x32/: exinet.lib
API_NEW/exinet/ucrt/x64/: exinet.lib
API_NEW/exiphl/: CMakeLists.txt  build-all.ps1  build.bat  dllmain.c  iphlpapi_stub.def  test_iphlpapi.py  version.rc
API_NEW/exiphl/include/arm64/: EXWS2.lib
API_NEW/exiphl/msvcrt/x32/: exiphl.lib
API_NEW/exmsw/: CMakeLists.txt  build-all.ps1  dllmain.c  version.rc
API_NEW/exnetapi/: CMakeLists.txt  build-all.ps1  build.bat  exnetapi.def  netapi32_core.c  test_netapi32.py  version.rc
API_NEW/exnetapi/ucrt/arm64/: EXNETAPI.lib
API_NEW/exnetapi/ucrt/x32/: EXNETAPI.lib
API_NEW/exnetapi/ucrt/x64/: EXNETAPI.lib
API_NEW/exsens/: CMakeLists.txt  build-all.ps1  build.bat  dllmain.c  sensapi.def  test_lib.py  version.rc
API_NEW/exsens/build-ucrt-arm64/: CMakeCache.txt  build.ninja  cmake_install.cmake
API_NEW/exsens/build-ucrt-x32/: CMakeCache.txt  build.ninja  cmake_install.cmake
API_NEW/exsens/build-ucrt-x64/: CMakeCache.txt  build.ninja  cmake_install.cmake  version.res
API_NEW/exsens/ucrt/arm64/: EXSENS.lib
API_NEW/exsens/ucrt/x64/: EXSENS.lib
API_NEW/extrust/: CMakeLists.txt  build-all.ps1  dllmain.c  version.rc  wintrust.def
API_NEW/extrust/ucrt/arm64/: EXTRUST.lib
API_NEW/extrust/ucrt/x32/: EXTRUST.lib
API_NEW/extrust/ucrt/x64/: EXTRUST.lib
API_NEW/exurlm/: CMakeLists.txt  build-all.ps1  build.bat  dllmain.c  urlmon.def  version.rc
API_NEW/exws/: CMakeLists.txt  build-all.ps1  dllmain.c  version.rc  ws_32.def
API_NEW/exws2/: CMakeLists.txt  build-all.ps1  dllmain.c  run_extreme_test.bat  test_winsock.py  test_zeromq_extreme.py  version.rc  ws2_32.def  ws2_emu.cpp
API_NEW/exws2/msvcrt/x64/: exws2.lib
API_NEW/exws2/ucrt/x32/: exws2.lib
API_NEW/msvcrt/x64/: exiphl.lib
API_NEW/ucrt/arm64/: exiphl.lib
API_PE_Replacer/: CHANGELOG.md  build.bat  config.py  main.py  requirements.txt  run.bat  run.sh
API_PE_Replacer/languages/: lang_ar.xml  lang_de.xml  lang_en.xml  lang_hi.xml  lang_it.xml  lang_ja.xml  lang_kk.xml  lang_nl.xml  lang_pl.xml  lang_ro.xml  lang_ru.xml  lang_sr.xml  lang_tr.xml  lang_uk.xml  lang_vi.xml  lang_zh.xml
